--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,6 +15,10 @@ jobs:
       - name: Install dependencies
         run: |
           $CONDA/bin/conda env update --file environment.yml --name base
+          $CONDA/bin/conda activate base
+          # Silent install OpenMM, should skip cudatoolkit
+          $CONDA/bin/conda install -c conda-forge openmm -y
+
           # install YAFF manually as conda package is outdated
           git clone https://github.com/molmod/yaff
           cd yaff
