--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,3 @@
-name: envopencmm
 channels:
   - conda-forge
   - defaults
@@ -30,7 +29,7 @@ dependencies:
   - numpy-base=1.19.2=py38hfa32c7d_0
   - ocl-icd=2.2.14=h7f98852_0
   - ocl-icd-system=1.0.0=1
-    #- openmm=7.5.0=py38hd674aa3_4
+  - openmm=7.4.0=py38hd674aa3_4
   - openssl=1.1.1i=h7f98852_0
   - pip=20.3.3=py38h06a4308_0
   - python=3.8.5=h7579374_1
@@ -54,4 +53,3 @@ dependencies:
     - pyparsing==3.0.0b2
     - python-dateutil==2.8.1
     - scipy==1.6.0
-prefix: /home/sandervandenhaute/miniconda3/envs/envopencmm
