--- a/environment.yml
+++ b/environment.yml
@@ -1,3 +1,4 @@
+name: envopencmm
 channels:
   - conda-forge
   - defaults
@@ -53,3 +54,5 @@ dependencies:
     - pyparsing==3.0.0b2
     - python-dateutil==2.8.1
     - scipy==1.6.0
+    - yaff==1.6.0.post17
+prefix: /home/sandervandenhaute/miniconda3/envs/envopencmm
