--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -19,7 +19,10 @@ jobs:
           python-version: 3.8
           activate-environment: testenv
       - name: Install dependencies
+        shell: bash -l {0}
         run: |
+          conda info
+          conda list
           conda activate testenv
           conda env update --name testenv --file environment.yml
 
