--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -34,11 +34,13 @@ jobs:
           rm -rf yaff
 
       - name: Install opencmm
+        shell: bash -l {0}
         run: |
           #git clone https://github.com/svandenhaute/opencmm
           #cd opencmm
           python setup.py install
 
       - name: Execute tests
+        shell: bash -l {0}
         run: |
           pytest --pyargs opencmm
