--- a/environment.yml
+++ b/environment.yml
@@ -54,5 +54,5 @@ dependencies:
     - pyparsing==3.0.0b2
     - python-dateutil==2.8.1
     - scipy==1.6.0
-    - yaff==1.6.0.post17
+      #- yaff==1.6.0.post17 # manual install
 prefix: /home/sandervandenhaute/miniconda3/envs/envopencmm
