--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -43,4 +43,5 @@ jobs:
       - name: Execute tests
         shell: bash -l {0}
         run: |
+          pip install pytest pytest-cov
           pytest --pyargs opencmm
