--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --pyargs openyaff --disable-warnings -s ./openyaff/tests
+addopts = --pyargs openyaff --disable-warnings -s ./openyaff/tests --cov-report=xml --cov=openyaff
