fixed code coverage report

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -49,8 +49,8 @@ jobs:
           conda list
           conda activate testenv
           echo 'TESTMESSAGE'
-          pip install pytest pytest-cov
-          pytest --pyargs openyaff
+          pip install pytest coverage
+          coverage run -m py.test
       - uses: codecov/codecov-action@v1
         with:
           token: fea4705c-9b79-49f7-92d6-2d12d25cac15
