--- a/environment.yml
+++ b/environment.yml
@@ -43,6 +43,7 @@ dependencies:
   - wheel=0.36.2=pyhd3eb1b0_0
   - xz=5.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
+  - mdtraj=1.9.5
   - pip:
     - cycler==0.10.0
     - future==0.18.2
