--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --pyargs openyaff --disable-warnings -s ./openyaff/tests/test_conversion.py
+addopts = --pyargs openyaff --disable-warnings -s ./openyaff/tests
