--- a/environment.yml
+++ b/environment.yml
@@ -57,4 +57,5 @@ dependencies:
     - scipy==1.6.0
     - pyyaml==5.4.1
     - coverage==5.3.1
+    - lxml==4.6.2
       #- yaff==1.6.0.post17 # manual install
