--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --pyargs openyaff --disable-warnings -s ./openyaff/tests
+addopts = --pyargs openyaff --disable-warnings -s ./openyaff/tests/test_validation.py
 
