added residue analysis to configurations; this is necessary to implement conversions whose output is an OpenMM force field .xml file instead of a system .xml file

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
-addopts = --pyargs openyaff --disable-warnings -s ./openyaff/tests/test_validation.py
+addopts = --pyargs openyaff --disable-warnings -s ./openyaff/tests/test_configuration.py::test_topology_templates
+log_cli = 1
+log_cli_level = debug
 
