--- a/environment.yml
+++ b/environment.yml
@@ -58,4 +58,5 @@ dependencies:
     - pyyaml==5.4.1
     - coverage==5.3.1
     - lxml==4.6.2
+    - networkx>=2.5.1
       #- yaff==1.6.0.post17 # manual install
