--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --pyargs openyaff --disable-warnings -s ./openyaff/tests/test_configuration.py::test_topology_templates
+addopts = --pyargs openyaff --disable-warnings -s ./openyaff/tests/
 log_cli = 1
 log_cli_level = debug
 
